compiler/testData/diagnostics/tests/regressions/ea40964.kt
// FIR_IDENTICAL
package checkFiles

import java.util.HashMap

fun main() {
    konst hashMap = HashMap<String, String>()
    hashMap[<!SYNTAX!><!>]
}
